--- a/Bundles/format.omnioutlinerjs/manifest.json
+++ b/Bundles/format.omnioutlinerjs/manifest.json
@@ -1,4 +1,6 @@
 {"author":"Taxyovio","libraries":[{"identifier":"ApplicationLib"}],"identifier":"com.taxyovio.format","version":"2021.03.17","description":"A collection of Omni Automation scripts formatting data in OmniOutliner.","actions":[
+	{"image":"icon.png","identifier":"clearStyle"},
+	{"image":"icon.png","identifier":"lineSpacing"},
 	{"image":"icon.png","identifier":"columnFormatter"},
 	{"image":"icon.png","identifier":"applyTitleCase"},
 	{"image":"icon.png","identifier":"splitColumn"},
