--- a/view.omnioutlinerjs/manifest.json
+++ b/view.omnioutlinerjs/manifest.json
@@ -1,4 +1,5 @@
 {"author":"Taxyovio","libraries":[{"identifier":"ApplicationLib"}],"identifier":"com.taxyovio.view","version":"2021.03.17","description":"A collection of Omni Automation scripts customising the view of data in OmniOutliner.","actions":[
 	{"image":"icon.png","identifier":"focusSelection"},
 	{"image":"icon.png","identifier":"wordCount"},
+	{"image":"icon.png","identifier":"characterCount"},
 ],"defaultLocale":"en"}
