Add texToPNG.js and update hideColumn.js

--- a/view.omnioutlinerjs/manifest.json
+++ b/view.omnioutlinerjs/manifest.json
@@ -4,4 +4,5 @@
 	{"image":"icon.png","identifier":"wordCount"},
 	{"image":"icon.png","identifier":"characterCount"},
 	{"image":"icon.png","identifier":"columnStatistics"},
+	{"image":"icon.png","identifier":"texToPNG"},
 ],"defaultLocale":"en"}
