--- a/Bundles/edit.omnioutlinerjs/manifest.json
+++ b/Bundles/edit.omnioutlinerjs/manifest.json
@@ -1,11 +1,12 @@
 {"author":"Taxyovio","libraries":[{"identifier":"ApplicationLib"}],"identifier":"com.taxyovio.edit","version":"2021.03.17","description":"A collection of Omni Automation scripts editing data in OmniOutliner.","actions":[
 	{"image":"icon.png","identifier":"copyColumn"},
 	{"image":"icon.png","identifier":"pasteColumn"},
+	{"image":"icon.png","identifier":"computeColumn"},
+	{"image":"icon.png","identifier":"duplicateColumn"},
 	{"image":"icon.png","identifier":"copyAsLink"},
 	{"image":"icon.png","identifier":"findAndReplace"},
 	{"image":"icon.png","identifier":"addText"},
 	{"image":"icon.png","identifier":"addLink"},
 	{"image":"icon.png","identifier":"addAttachment"},
 	{"image":"icon.png","identifier":"renameAttachment"},
-	{"image":"icon.png","identifier":"duplicateColumn"},
 ],"defaultLocale":"en"}
