Add SF symbols as icons

--- a/Bundles/edit.omnioutlinerjs/manifest.json
+++ b/Bundles/edit.omnioutlinerjs/manifest.json
@@ -1,12 +1,12 @@
 {"author":"Taxyovio","libraries":[{"identifier":"ApplicationLib"}],"identifier":"com.taxyovio.edit","version":"2021.03.17","description":"A collection of Omni Automation scripts editing data in OmniOutliner.","actions":[
-	{"image":"icon.png","identifier":"copyColumn"},
-	{"image":"icon.png","identifier":"pasteColumn"},
-	{"image":"icon.png","identifier":"computeColumn"},
-	{"image":"icon.png","identifier":"duplicateColumn"},
-	{"image":"icon.png","identifier":"copyAsLink"},
-	{"image":"icon.png","identifier":"findAndReplace"},
-	{"image":"icon.png","identifier":"addText"},
-	{"image":"icon.png","identifier":"addLink"},
-	{"image":"icon.png","identifier":"addAttachment"},
-	{"image":"icon.png","identifier":"renameAttachment"},
+	{"image": "doc.on.doc","identifier":"copyColumn"},
+	{"image":"doc.on.clipboard","identifier":"pasteColumn"},
+	{"image":"function","identifier":"computeColumn"},
+	{"image":"plus.square.on.square","identifier":"duplicateColumn"},
+	{"image":"link","identifier":"copyAsLink"},
+	{"image":"text.magnifyingglass","identifier":"findAndReplace"},
+	{"image":"text.badge.plus","identifier":"addText"},
+	{"image":"link.badge.plus","identifier":"addLink"},
+	{"image":"paperclip","identifier":"addAttachment"},
+	{"image":"character.cursor.ibeam","identifier":"renameAttachment"},
 ],"defaultLocale":"en"}
