--- a/Bundles/view.omnioutlinerjs/manifest.json
+++ b/Bundles/view.omnioutlinerjs/manifest.json
@@ -1,8 +1,8 @@
 {"author":"Taxyovio","libraries":[{"identifier":"ApplicationLib"}],"identifier":"com.taxyovio.view","version":"2021.03.17","description":"A collection of Omni Automation scripts customising the view of data in OmniOutliner.","actions":[
-	{"image":"icon.png","identifier":"focusSelection"},
-	{"image":"icon.png","identifier":"hideColumn"},
-	{"image":"icon.png","identifier":"wordCount"},
-	{"image":"icon.png","identifier":"characterCount"},
-	{"image":"icon.png","identifier":"columnStatistics"},
-	{"image":"icon.png","identifier":"texToPNG"},
+	{"image":"plus.magnifyingglass","identifier":"focusSelection"},
+	{"image":"eye.slash","identifier":"hideColumn"},
+	{"image":"a.circle","identifier":"wordCount"},
+	{"image":"asterisk.circle","identifier":"characterCount"},
+	{"image":"chart.pie","identifier":"columnStatistics"},
+	{"image":"123.rectangle","identifier":"texToPNG"},
 ],"defaultLocale":"en"}
